@@ -2,36 +2,46 @@ package com.googleapi;
 
 import com.google.auth.oauth2.AccessToken;
 import com.google.auth.oauth2.GoogleCredentials;
+import com.google.auth.oauth2.ServiceAccountCredentials;
 import io.restassured.response.Response;
 import org.testng.Assert;
 import org.testng.annotations.Test;
 
 import java.io.FileInputStream;
+import java.io.FileNotFoundException;
 import java.io.IOException;
+import java.io.InputStream;
 import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 
 import static io.restassured.RestAssured.given;
+import static org.hamcrest.Matchers.equalTo;
 import static org.hamcrest.Matchers.notNullValue;
 
 public class DriveApiTest {
 
-    private String getAccessToken() throws IOException {
-        GoogleCredentials credentials = GoogleCredentials
-                .fromStream(new FileInputStream("src/test/resources/credentials.json"))
-                .createScoped(Collections.singletonList("https://www.googleapis.com/auth/drive.metadata.readonly"));
+    private AccessToken getAccessToken() throws IOException {
+        InputStream inputStream = getClass().getClassLoader().getResourceAsStream("credentials.json");
+
+        if (inputStream == null) {
+            throw new FileNotFoundException("credentials.json not found in resources");
+        }
+
+        GoogleCredentials credentials = ServiceAccountCredentials.fromStream(inputStream)
+                .createScoped(List.of("https://www.googleapis.com/auth/drive"));
+
         credentials.refreshIfExpired();
         AccessToken token = credentials.getAccessToken();
         System.out.println("Access token: " + token.getTokenValue());
         System.out.println("Expires at: " + token.getExpirationTime());
 
-        return credentials.getAccessToken().getTokenValue();
+        return token;
     }
 
     @Test
     public void listSharedFiles() throws IOException {
-        String token = getAccessToken();
+        String token = getAccessToken().getTokenValue();
 
         Response response = given()
                 .baseUri("https://www.googleapis.com")
@@ -64,7 +74,7 @@ public class DriveApiTest {
     }
     @Test
     public void getDriveAboutInfo() throws IOException {
-        String token = getAccessToken();
+        String token = getAccessToken().getTokenValue();
 
         Response response = given()
                 .baseUri("https://www.googleapis.com")
@@ -87,6 +97,41 @@ public class DriveApiTest {
         System.out.println("📊 Drive Info:");
         System.out.println(response.asPrettyString());
     }
+    @Test
+    public void createFolderInDrive() throws IOException {
+
+
+        String token = getAccessToken().getTokenValue();
+
+        // Folder metadata
+        String folderMetadata = """
+        {
+          "name": "MyTestFolder",
+          "mimeType": "application/vnd.google-apps.folder"
+        }
+        """;
+
+        Response response = given()
+                .baseUri("https://www.googleapis.com")
+                .basePath("/drive/v3/files")
+                .header("Authorization", "Bearer " + token)
+                .header("Content-Type", "application/json")
+                .body(folderMetadata)
+                .when()
+                .post();
+
+        // ✅ Validate response
+        response.then()
+                .statusCode(200)
+                .body("id", notNullValue())
+                .body("name", equalTo("MyTestFolder"))
+                .body("mimeType", equalTo("application/vnd.google-apps.folder"));
+
+        // Print result
+        System.out.println("📁 Folder created: " + response.jsonPath().getString("id"));
+    }
+
+
 
 
 }
